# colcon-bazel

./: .gitignore  .travis.yml  README.md  appveyor.yml  setup.cfg  stdeb.cfg
.github/workflows/: ci.yaml
colcon_bazel/: __init__.py
colcon_bazel/argcomplete_completer/: bazel_args.py
colcon_bazel/package_identification/: bazel.py
colcon_bazel/task/bazel/: __init__.py  build.py  test.py
test/: spell_check.words  test_argcomplete_completer_bazel_args.py  test_copyright_license.py  test_flake8.py  test_package_identification_bazel.py  test_spell_check.py  test_task_bazel_build.py  test_task_bazel_test.py
