[metadata]
name = colcon-bazel
version = attr: colcon_bazel.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-bazel/milestones?state=closed
    GitHub = https://github.com/colcon/colcon-bazel/
author = Mickael Gaillard
author_email = mick.gaillard@gmail.com
maintainer = Mickael Gaillard
maintainer_email = mick.gaillard@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to support Bazel packages.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = colcon

[options]
install_requires =
  colcon-core
  # to set an environment variable when a package installs a library
  colcon-library-path
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = true

[options.packages.find]
exclude =
  test
  test.*

[tool:pytest]
junit_suite_name = colcon-bazel

[options.entry_points]
colcon_argcomplete.argcomplete_completer =
    bazel_args = colcon_bazel.argcomplete_completer.bazel_args:BazelArgcompleteCompleter
colcon_core.environment_variable =
    bazel_command = colcon_bazel.task.bazel:BAZEL_COMMAND_ENVIRONMENT_VARIABLE
colcon_core.package_identification =
    bazel = colcon_bazel.package_identification.bazel:BazelPackageIdentification
colcon_core.task.build =
    bazel = colcon_bazel.task.bazel.build:BazelBuildTask
colcon_core.task.test =
    bazel = colcon_bazel.task.bazel.test:BazelTestTask

[flake8]
import-order-style = google
